Item 5642: SNPRC Scheduler Timeline Updates
- Project and timeline titles added to accordion panel titles
- Updated icons for procedure notes
- Add study day 0 field and handlers
- Add scheduled dates and handlers to grid
- Fix for procedure notes
- Formatting and functionality miscellaneous updates

--- a/snprc_scheduler/src/client/styles/css/Accordion.style.css
+++ b/snprc_scheduler/src/client/styles/css/Accordion.style.css
@@ -17,11 +17,6 @@
     cursor: default !important;
 }
 
-/*.scheduler-timeline-list .react-grid-HeaderCell,*/
-/*.scheduler-project-list .react-grid-HeaderCell {*/
-    /*width: 100% !important;*/
-/*}*/
-
 .scheduler-timeline-list,
 scheduler-project-list{
     padding-right: 0px !important;
@@ -65,4 +60,10 @@ scheduler-project-list{
 
 .scheduler-bs-accordion input.form-control {
     width: 100% !important;
+}
+
+.scheduler-bs-accordion-title {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
