--- a/snprc_scheduler/src/client/styles/css/Timeline.style.css
+++ b/snprc_scheduler/src/client/styles/css/Timeline.style.css
@@ -1,7 +1,12 @@
 
 .timeline-grid {
-    margin-left: 20px;
-    margin-right: 20px;
+    /*margin-left: 20px;*/
+    margin-right: 30px;
+}
+
+.timeline-grid-proc-note {
+    width: 100%;
+    height: 100px;
 }
 
 .timeline-grid .react-grid-Grid {
