--- a/snprc_scheduler/src/client/styles/css/Projects.style.css
+++ b/snprc_scheduler/src/client/styles/css/Projects.style.css
@@ -3,3 +3,9 @@
     padding-left: 0px;
     padding-right: 30px;
 }
+
+.project-details .input-row {
+    padding-bottom: 10px;
+    padding-left: 0px;
+    padding-right: 0px;
+}
