--- a/snprc_scheduler/src/client/styles/css/Timeline.style.css
+++ b/snprc_scheduler/src/client/styles/css/Timeline.style.css
@@ -13,6 +13,10 @@
     border-radius: 4px;
 }
 
+.timeline-grid-disabled {
+    opacity: 0.5;
+}
+
 .timeline-grid .react-grid-Cell__value {
     -webkit-align-content: center !important;
     align-content: center !important;
@@ -85,6 +89,31 @@
             translate(-40px, -15px)
 }
 
+.wkDay-t1-grid-hdr {
+    border-bottom: 3px groove rgb(255, 255, 255) !important;
+    border-top: 3px groove rgb(255, 255, 255) !important;
+    width: 260px !important;
+    height: 53px;
+    padding-top: 10px;
+    padding-bottom: 0px !important;
+    padding-left: 65px;
+    margin-bottom: 0px !important;
+    transform:
+            translate(-40px, -15px)
+}
+
+.studyDayNote-t1-grid-hdr {
+    border-top: 3px groove rgb(255, 255, 255) !important;
+    width: 260px !important;
+    height: 53px;
+    padding-top: 20px;
+    padding-bottom: 0px !important;
+    padding-left: 65px;
+    margin-bottom: 0px !important;
+    transform:
+            translate(-40px, -15px)
+}
+
 .timeline-grid .react-grid-HeaderRow > div {
     height: 120px !important;
     /*background-image: linear-gradient(to bottom,#f5f5f5 0,#e8e8e8 100%);*/
@@ -138,6 +167,10 @@
 .timeline-grid .chbox {
     height: 17px;
     width: 17px;
+}
+
+.timeline-grid-delete-icon {
+    margin-top: 10px;
 }
 
 .modal-header {
