Epic 5642 & 5646: Updated timeline and animal selection
Updates to timeline based on user feedback.  Update accordion control to handle navigation to/from animal select.  Add animal reducer.  Add available/assigned grids with sorting, filtering and assigning functionality.  Fix bottom overflow issue with react boostrap table in available animal grid.  Handle end date in assigned animal grid

--- a/snprc_scheduler/src/client/styles/css/Default.style.css
+++ b/snprc_scheduler/src/client/styles/css/Default.style.css
@@ -34,9 +34,13 @@
     margin-left: 20px;
 }
 
-.bottom-padding-8 {
+.top-bottom-padding-8 {
     padding-bottom: 8px;
     padding-top: 8px;
+}
+
+.bottom-padding-8 {
+    padding-bottom: 8px;
 }
 
 .scheduler-view {
@@ -53,6 +57,11 @@
     padding-bottom: 5px;
     padding-left: 0px;
     padding-right: 0px;
+}
+
+.scheduler-main-table {
+    padding-left: 0px;
+    padding-right: 30px;
 }
 
 /* React data grid styles */
