--- a/snprc_scheduler/src/client/styles/css/Default.style.css
+++ b/snprc_scheduler/src/client/styles/css/Default.style.css
@@ -1,111 +1,144 @@
 
 .spacer-row {
-    min-height: 30px;
-  }
-  
-  .no-border {
+    min-height: 57px;
+}
+
+.no-border {
     border: none;
     border-color: #fff;
     box-shadow: none !important;
-  }
-  
-  .search-input {
+}
+
+.search-input {
     color: #444;
     height: 30px !important;
-  }
-  
-  .input-group-addon-buffer {
-    width: 36px; 
-  }
+}
 
-  .smooth-border {
+.input-group-addon-buffer {
+    width: 36px;
+}
+
+.wrap-words {
+    word-wrap: normal;
+    overflow-wrap: normal;
+    white-space: normal;
+}
+
+.smooth-border {
     border: 1px solid;
     border-color: rgb(165, 165, 165);
-    border-radius: 3px;    
-  }
+    border-radius: 3px;
+}
 
-  .input-group-left-margin {
+.input-group-left-margin {
     margin-left: 20px;
-  }
+}
 
-  .bottom-padding-8 {
+.top-bottom-padding-8 {
     padding-bottom: 8px;
     padding-top: 8px;
-  }
-  
-  .App { }
+}
 
-  .input-wide {
+.bottom-padding-8 {
+    padding-bottom: 8px;
+}
+
+.scheduler-view {
+    min-width: 1200px;
+    margin-top: -10px;
+}
+
+.input-wide {
     width: 100% !important;
     height: 24px !important;
-  }
+}
 
-  .input-row {
+.input-row {
     padding-bottom: 5px;
     padding-left: 0px;
     padding-right: 0px;
-  }
+}
 
-  /* React data grid styles */
+.scheduler-main-table {
+    padding-left: 0px;
+    padding-right: 30px;
+}
 
-  
-  .hide-react-grid-header {
-    display:none !important;
-  }
+/* React data grid styles */
 
-  .maximize-react-grid-viewport {
+
+.hide-react-grid-header {
+    display: none !important;
+}
+
+.maximize-react-grid-viewport {
     top: 0px !important;
-  }
-  
-  .study-notes {
+}
+
+.study-notes {
     height: 104px !important;
     position: fixed;
     margin-left: -85px;
     width: 380px !important;
-  }
+}
 
-  .details-frame {
+.details-frame {
     height: 145px;
-  }
+    margin-bottom: 10px;
+}
 
-  .zero-side-padding {
+.zero-side-padding {
     padding-left: 0px;
     padding-right: 0px;
-  }
+}
 
-  .control-label {
+.zero-right-padding {
+    padding-right: 0px;
+}
+
+.zero-left-padding {
+    padding-left: 0px;
+}
+
+.control-label {
     text-align: left !important;
     float: left;
     margin-top: 5px;
     width: 40%;
     clear: both;
     margin-left: 20px;
-  }
+}
 
-  input.form-control {
+input.form-control {
     width: 40%;
-  }
+}
 
-  textarea.form-control {
+textarea.form-control {
     width: 100%;
     height: 60px;
     margin-bottom: 10px;
-  }
+}
 
-  .scheduler-save-cancel-btn {
+.scheduler-save-cancel-btn {
     margin-left: 17px;
     margin-right: 15px;
     width: 100%;
     font-weight: bold;
-  }
+}
 
-  .scheduler-save-cancel {
+.scheduler-save-cancel {
     padding-right: 15px;
-  }
+}
 
-  .timeline-saving-modal .modal-content {
+.timeline-saving-modal .modal-content {
     background-color: transparent;
     border: 0px !important;
     -webkit-box-shadow: none !important;
     box-shadow: none !important;
-  }
+}
+
+.alert-banner {
+    margin-bottom: 15px;
+    padding: 10px 15px;
+}
+
