--- a/snprc_scheduler/src/client/styles/css/Timeline.style.css
+++ b/snprc_scheduler/src/client/styles/css/Timeline.style.css
@@ -1,11 +1,20 @@
 
 .timeline-grid {
-    margin-left: 20px;
-    margin-right: 20px;
+    /*margin-left: 20px;*/
+    margin-right: 30px;
+}
+
+.timeline-grid-proc-note {
+    width: 100%;
+    height: 100px;
 }
 
 .timeline-grid .react-grid-Grid {
     border-radius: 4px;
+}
+
+.timeline-grid-disabled {
+    opacity: 0.5;
 }
 
 .timeline-grid .react-grid-Cell__value {
@@ -80,6 +89,31 @@
             translate(-40px, -15px)
 }
 
+.wkDay-t1-grid-hdr {
+    border-bottom: 3px groove rgb(255, 255, 255) !important;
+    border-top: 3px groove rgb(255, 255, 255) !important;
+    width: 260px !important;
+    height: 53px;
+    padding-top: 10px;
+    padding-bottom: 0px !important;
+    padding-left: 65px;
+    margin-bottom: 0px !important;
+    transform:
+            translate(-40px, -15px)
+}
+
+.studyDayNote-t1-grid-hdr {
+    border-top: 3px groove rgb(255, 255, 255) !important;
+    width: 260px !important;
+    height: 53px;
+    padding-top: 20px;
+    padding-bottom: 0px !important;
+    padding-left: 65px;
+    margin-bottom: 0px !important;
+    transform:
+            translate(-40px, -15px)
+}
+
 .timeline-grid .react-grid-HeaderRow > div {
     height: 120px !important;
     /*background-image: linear-gradient(to bottom,#f5f5f5 0,#e8e8e8 100%);*/
@@ -133,6 +167,10 @@
 .timeline-grid .chbox {
     height: 17px;
     width: 17px;
+}
+
+.timeline-grid-delete-icon {
+    margin-top: 10px;
 }
 
 .modal-header {
