snprc ehr_lookups species_code ETL type
restored species TSV

snprc ARC species code (char 2) etl

--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -150,12 +150,12 @@
                 queryName: 'reports',
                 pk: 'rowid'
             }, {
-        //        label: 'Species codes', 
-        //        populateFn: 'populateFromFile',
-        //        schemaName: 'ehr_lookups',
-        //        queryName: 'species_codes',
-        //        pk: 'rowid'
-        //    }, {
+                label: 'Species codes',
+                populateFn: 'populateFromFile',
+                schemaName: 'ehr_lookups',
+                queryName: 'species_codes',
+                pk: 'rowid'
+            }, {
                 label: 'source',
                 populateFn: 'populateFromFile',
                 schemaName: 'ehr_lookups',
