--- a/snprc_ehr/src/client/styles/style.scss
+++ b/snprc_ehr/src/client/styles/style.scss
@@ -1,2 +1,2 @@
-@import "base/settings";
-@import "~bootstrap/dist/css/bootstrap.min.css";
+@import "./settings";
+@import "~react-datepicker/dist/react-datepicker.css";
