--- a/snprc_ehr/src/client/styles/base/_base.scss
+++ b/snprc_ehr/src/client/styles/base/_base.scss
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    background: $dark-blue;
+    //background: $dark-blue;
     font-family: helvetica, Arial, sans-serif;
     font-size: $m-size;
 }
