--- a/snprc_ehr/src/client/styles/settings.scss
+++ b/snprc_ehr/src/client/styles/settings.scss
@@ -1,6 +1,7 @@
 // Colors
 $dark-gray: #333333;
 $gray: #666;
+$disabled-gray: #c7c7c7;
 $button-blue: #1c88bf;
 $dark-blue: #364051;
 $off-white: #f7f7f7;
@@ -8,6 +9,7 @@ $off-white: #f7f7f7;
 $font-size-xlarge: 3.6rem;
 $font-size-large: 1.8rem;
 $font-size-small: 1.4rem;
+$font-size-xsmall: 1.0rem;
 // Spacing
 $m-size: 1.6rem;
 $l-size: 3.2rem;
