--- a/snprc_ehr/src/client/styles/style.scss
+++ b/snprc_ehr/src/client/styles/style.scss
@@ -1,9 +1,3 @@
-@import "./settings";
+@import "./settings.scss";
 @import "./base/base";
-@import "./components/speciesPanel";
-@import "./components/acquisitionPanel";
-@import "./components/wizard";
-@import "./components/datePicker";
-@import "./components/demographicsPanel";
-@import "./components/locationPanel";
-@import "~react-datepicker/dist/react-datepicker.css";
+@import "./base/shared";
