--- a/snprc_ehr/src/client/NewAnimalPage/styles/components/_panels.scss
+++ b/snprc_ehr/src/client/NewAnimalPage/styles/components/_panels.scss
@@ -15,31 +15,40 @@
 }
 .panel-heading {
   border: 1px solid $dark-gray;
-  padding: .5rem .5rem .5rem 2rem;
+  padding: .4rem .4rem .1rem 2rem;
   border-radius: 1px;
-  
 }
 .panel-heading[disabled] {
   background-color: $disabled-gray;
 }
 .panel-heading p {
-    padding-top: 1rem;
+    padding-top: .8rem;
     font-weight: bold;
 }
 
 .field-label {
-  margin-left: $s-size;
+  text-align: left;
+  margin: 0 $s-size;
   font-size: $font-size-small;
   display: inline-block;
   width: 15rem;
 }
-.label-align {
-  text-align:left
+
+.field-label-align-top {
+  text-align:left;
+  margin: 0 $s-size;
+  font-size: $font-size-small;
+  padding: 0 0 2px 0 !important;
 }
-.err-panel {
-  text-align: left;
-  font-size: $font-size-medium;
-  padding: 7rem 0 $xs-size $s-size;
-  color: red;
-  height: $xs-panel;
+.field-label-align-close {
+  text-align:left;
+  margin: 0 0 0 $s-size;
+  font-size: $font-size-small;
+  display: inline-block;
+}
+.top-spacing {
+  padding-top: 13px;
+}
+.hidden {
+  display: none;
 }
