--- a/snprc_ehr/src/client/styles/base/_shared.scss
+++ b/snprc_ehr/src/client/styles/base/_shared.scss
@@ -1,8 +1,10 @@
+//react-select component styling - 30px height
 
   .shared-dropdown {
-    border-color: $gray;
+    border-color: $gray !important;
     border-width: 2px;
     border-left: $s-size;
+    font-family: helvetica, Arial, sans-serif;
     font-size: $font-size-small;
     width: 40rem;
     padding-left: 1rem;
@@ -10,23 +12,47 @@
 }
 
 .shared-select__control {
-    height: 26px !important;
+  background: #fff;
+  border-color: #9e9e9e;
+  min-height: 30px !important;
+  height: 30px;
+  justify-content: center !important;
+  padding: 0 !important;
 }
 
-.shared-select__placeholder {
-      line-height: 50px;
-    }
-.shared-select__value {
-      line-height: 26px !important;
-}
-.shared-select__value-label {
-        line-height: 26px;
-      }
 .shared-select__input {
-      height: 26px;
-    }
-//.shared-select__menu { max-height: 50px;}
-.shared-select-is-open { position: relative; z-index: 1000; }
+  margin: 0;
+}
+
+.shared-select__indicator {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+.shared-select__loading-indicator {
+  padding: 0 2px !important;
+  margin: 0 2px !important;
+}
+
+.shared-select__indicator-separator {
+  margin: 0 !important;
+}
+
+.shared-select__value-container {
+  height: 30px;
+  padding-bottom: 0px !important;
+  margin: 0, 6px;
+}
+.shared-select__single-value {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
+.shared-select__placeholder {
+  height: 30px;
+  line-height: 30px;
+}
+
+// panel effects
 
 .fade-in {
   animation: fadeIn ease-in 300ms;
@@ -40,7 +66,22 @@
   }
 }
 
+// spinner styling
+
 .spinner {
   color: $dark-blue;
   background-color: $off-white;
+}
+
+// pager button div
+
+.button-row {
+  padding-top: 1px;
+}
+
+.save-button {
+  //position: absolute;
+  text-align: right;
+  padding-right: 200px;
+
 }
