--- a/snprc_ehr/src/client/NewAnimalPage/styles/components/_speciesPanel.scss
+++ b/snprc_ehr/src/client/NewAnimalPage/styles/components/_speciesPanel.scss
@@ -12,7 +12,7 @@
 }
 
 .species-radio {
-  padding-top: $s-size;
+  padding-top: 2px;
   padding-left: $s-size;
   font-size: $font-size-small;
   padding-left: 3rem;
