--- a/snprc_ehr/src/client/styles/base/_base.scss
+++ b/snprc_ehr/src/client/styles/base/_base.scss
@@ -7,7 +7,7 @@ html {
 body {
     //background: $dark-blue;
     font-family: helvetica, Arial, sans-serif;
-    font-size: $m-size;
+    font-size: $font-size-small;
 }
 
 button {
