--- a/snprc_ehr/src/client/NewAnimalPage/styles/newAnimalPage.scss
+++ b/snprc_ehr/src/client/NewAnimalPage/styles/newAnimalPage.scss
@@ -1,15 +1,11 @@
 @import "../../styles/style";
 @import "./components/speciesPanel";
-@import "./components/acquisitionPanel";
 @import "./components/wizard";
 @import "../../utils/components/wrappedDatePicker";
-@import "./components/demographicsPanel";
 @import "./components/locationPanel";
-@import "./components/accountPanel";
 @import "./components/dietPanel";
 @import "./components/panels";
-
-.button-row {
-    padding-top: 1px;
-}
-  
+@import "./components/summaryPanel";
+@import "./components/infoPanel";
+@import "./components/shared";
+@import "./components/modal";
