New dev: 1. Added RowID to ActiveLocationsAll.sql 2. Added bdStatus dropdown to DemographicsPanel.jsx 3. Added SuccessPanel and Modal 4. Refactored NewAnimalPage directory structure 5. Additional unit test coverage 6. Added link to New Animal Wizard on snprc_ehr landing page 7. Added new security role and permission: SNPRCColonyAdmin(Role/Permission) 8. UpdateAnimalData (Save data) implemented 9. Updated SNPRC_EHRModule version to 20.008

--- a/snprc_ehr/resources/views/begin.html
+++ b/snprc_ehr/resources/views/begin.html
@@ -109,7 +109,8 @@ Ext4.onReady(function(){
                 style: 'font-weight: bold;'
             },
             items: [
-                {name: 'Enter Data', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/enterData.view'}
+                {name: 'Enter Data', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/enterData.view'},
+                {name: 'New Animal Wizard', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/NewAnimalWizard.view?'}
             ]
         }]
     };
