--- a/snprc_ehr/src/client/NewAnimalPage/styles/newAnimalPage.scss
+++ b/snprc_ehr/src/client/NewAnimalPage/styles/newAnimalPage.scss
@@ -1,7 +1,7 @@
 @import "../../styles/style";
 @import "./components/speciesPanel";
 @import "./components/wizard";
-@import "../../utils/components/wrappedDatePicker";
+@import "./components/wrappedDatePicker";
 @import "./components/locationPanel";
 @import "./components/dietPanel";
 @import "./components/panels";
