1. handle clearing of "Acquisition Code" on   AcquisitionPanel when "Acquisition Type" changes on SpeciesPanel 2. disable Save and Close buttons after click in SaveModal 3. reformatted SummaryPanel 4. added BirthCode column to the NewAnimalData.java domain 5. use DietCode instead of SnomedCode for diet table pk in fetchDiets.js 6. added summary grid to list new animal additions in the current new animal wizard session 7. updated tests and snapshots

--- a/snprc_ehr/src/client/NewAnimalPage/styles/components/_panels.scss
+++ b/snprc_ehr/src/client/NewAnimalPage/styles/components/_panels.scss
@@ -1,3 +1,12 @@
+.split-panel {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.right-panel {
+  flex: 1;
+  padding-left: 1rem;
+}
 .parent-panel {
   display: flex;
   flex-direction: column;
@@ -20,7 +29,6 @@
     padding-top: .8rem;
     font-weight: bold;
 }
-
 .field-label {
   text-align: left;
   margin: 0 $s-size;
@@ -71,9 +79,4 @@
   100% {
     opacity:1;
   }
-}
-
-// pager button div
-.button-row {
-  padding-top: 1px;
 }
