--- a/snprc_ehr/src/client/NewAnimalPage/styles/newAnimalPage.scss
+++ b/snprc_ehr/src/client/NewAnimalPage/styles/newAnimalPage.scss
@@ -9,3 +9,4 @@
 @import "./components/infoPanel";
 @import "./components/shared";
 @import "./components/modal";
+@import "./components/summaryGridPanel";
