--- a/snprc_ehr/src/client/styles/settings.scss
+++ b/snprc_ehr/src/client/styles/settings.scss
@@ -3,7 +3,7 @@ $dark-gray: #333333;
 $light-gray: #999;
 $gray: #666;
 $disabled-gray: #f5f5f5; //eeee;
-$button-blue: #1c88bf;
+$button-blue: #282aa5;
 $dark-blue: #364051;
 $off-white: #f7f7f7;
 $info-red: #c24343;
@@ -26,5 +26,5 @@ $desktop-breakpoint: 100rem;
 $xs-panel: 2rem;
 $s-panel: 20rem;
 $m-panel: 25rem;
-$l-panel: 40rem;
+$l-panel: 37rem;
 $m-panel-width: 30rem;
