--- a/snprc_ehr/src/client/NewAnimalPage/styles/newAnimalPage.scss
+++ b/snprc_ehr/src/client/NewAnimalPage/styles/newAnimalPage.scss
@@ -1,12 +1,12 @@
-@import "../../styles/style";
+@import "../../Shared/styles/style";
+@import "../../shared/styles/formatting/wizard";
+@import "../../shared/styles/formatting/panels";
+@import "../../Shared/styles/components/wrappedDatePicker";
+@import "../../Shared/styles//components/modal";
+@import "../../Shared/styles/components/shared";
+@import "../../Shared/styles/components/infoPanel";
+@import "../../Shared/styles/components/summaryGridPanel";
 @import "./components/speciesPanel";
-@import "./components/wizard";
-@import "./components/wrappedDatePicker";
 @import "./components/locationPanel";
 @import "./components/dietPanel";
-@import "./components/panels";
 @import "./components/summaryPanel";
-@import "./components/infoPanel";
-@import "./components/shared";
-@import "./components/modal";
-@import "./components/summaryGridPanel";
