new dev - NewAnimalWizard 1. Darkened disabled color 2. ignore sub-species change - added error reporting to UI 3. refactored fetchlocations query to use LABKEY.Query.executeSql (needed to include NULL species locations) 4. added LABKEY.Query.executeSQL to api 5. don't clear acquisition type on species change (state.selectedOption and state.newAnimalData.selectedOption) 6. lint fixes 7. updated snapshot

--- a/snprc_ehr/src/client/Shared/styles/settings.scss
+++ b/snprc_ehr/src/client/Shared/styles/settings.scss
@@ -2,7 +2,7 @@
 $dark-gray: #333333;
 $light-gray: #999;
 $gray: #666;
-$disabled-gray: #f5f5f5; //eeee;
+$disabled-gray: #eeee; //#f5f5f5;
 $button-blue: #282aa5;
 $dark-blue: #364051;
 $off-white: #f7f7f7;
