--- a/snprc_ehr/src/client/BirthRecordReport/styles/birthRecordReport.scss
+++ b/snprc_ehr/src/client/BirthRecordReport/styles/birthRecordReport.scss
@@ -4,3 +4,12 @@
 @import "../../shared/styles/formatting/panels";
 @import "../../Shared/styles/components/infoPanel";
 @import "../../Shared/styles/components/summaryGridPanel";
+
+
+.right-panel {
+    flex: 1;
+    padding-left: 1rem;
+    flex-direction: column;
+    height: $m-panel;
+    max-width: $m-panel-width;
+}
