--- a/snprc_ehr/resources/views/begin.html
+++ b/snprc_ehr/resources/views/begin.html
@@ -1,137 +1,178 @@
 <script type="text/javascript">
 
-Ext4.onReady(function(){
-    var webpart = <%=webpartContext%>;
-    var ctx = EHR.Utils.getEHRContext(webpart.wrapperDivId);
-    if(!ctx)
-        return;
+    let webpart = <%=webpartContext%>;
+    let ctx = EHR.Utils.getEHRContext(webpart.wrapperDivId);
+    let currentUserGroups = [];
 
-    var issueHTML = '';
-    if (ctx['EHRIssuesContainer']){
-        issueHTML = '<div style="max-width:920px">Below are the sections of the Electronic Health Record.  If there are additional reports you would like, please submit a request <a href="' + LABKEY.ActionURL.buildURL('issues', 'list', ctx['EHRIssuesContainer']) + '" target="_blank">here</a>.<br><br></div>'
-    }
+    Ext4.onReady(() => {
 
-    Ext4.get(webpart.wrapperDivId).update(
-        issueHTML +
-        '<table>' +
-        '<tr style="vertical-align:top">' +
-        '    <td style="width:300px">' +
-        '        <div id="ehrMenu1_'+webpart.wrapperDivId+'"></div>' +
-        '    </td>' +
-        '    <td style="width:300px;vertical-align:top">' +
-        '        <div id="ehrMenu2_'+webpart.wrapperDivId+'"></div>' +
-        '    </td>' +
-        '    <td style="width:300px">' +
-        '        <div id="ehrMenu3_'+webpart.wrapperDivId+'"></div>' +
-        '    </td>' +
-        '</tr>' +
-        '</table>'
-    );
+        if (!ctx)
+            return;
 
-    Ext4.create('LDK.panel.NavPanel', {
-        width: 270,
-        renderTo: 'ehrMenu1_'+webpart.wrapperDivId,
-        sections: [{
-            header: 'By Animal',
-            itemDefaults: {
-                linkCls: 'none',
-                style: 'font-weight: bold;'
-            },
-            items: [
-                {name: 'Animal History', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/animalHistory.view?'},
-                {name: 'Animal Search', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/animalSearch.view?'}
-            ]
-        },{
-            header: 'By Dataset',
-            itemDefaults: {
-                linkCls: 'none',
-                style: 'font-weight: bold;'
-            },
-            items: [
-                {name: 'Browse All Datasets', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/datasets.view?'},
-                {name: 'Housing Queries', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/housingQueries.view?'},
-                {name: 'Protocol and Project Queries', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/projectQueries.view?'}
-            ]
-        },{
-            header: 'By Location',
-            itemDefaults: {
-                linkCls: 'none',
-                style: 'font-weight: bold;'
-            },
-            items: [
-                {name: 'Search By Area or Room', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/animalHistory.view#inputType:roomCage'},
-                {
-                    name: 'Animal Tree View Navigation',
-                    url: '<%=contextPath%>/AnimalsHierarchy' + ctx['EHRStudyContainer'] + '/getView.view'
+        const getCurrentUserGroups = () => {
+            return new Promise((resolve, reject) => {
+                const success = groups => {
+                    resolve(groups)
                 }
-            ]
-        }]
+                const failure = error => {
+                    reject(error)
+                }
+                LABKEY.Security.getGroupsForCurrentUser({
+                    success,
+                    failure
+                })
+            })
+        }
+        getCurrentUserGroups().then(({ groups }) => {
+            currentUserGroups = groups;
+            renderPage();
+        }).catch(error => {
+            console.log(error)
+        })
     });
+    const renderPage = () => {
+        let issueHTML = '';
 
-    Ext4.create('LDK.panel.NavPanel', {
-        width: 270,
-        renderTo: 'ehrMenu2_'+webpart.wrapperDivId,
-        sections: [{
-            header: 'Entire Colony',
-            itemDefaults: {
-                linkCls: 'none',
-                style: 'font-weight: bold;'
-            },
-            items: [
-                //{name: 'Animal Groups', url: '<%=contextPath%>/query' + ctx['EHRStudyContainer'] + '/executeQuery.view?schemaName=ehr&query.queryName=animal_groups&query.viewName=Active Groups'},
-                {name: 'Colony Overview', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/colonyOverview.view?'},
-                {name: 'Room Utilization', url: '<%=contextPath%>/query' + ctx['EHRStudyContainer'] + '/executeQuery.view?schemaName=ehr_lookups&query.queryName=roomUtilization'},
-                {name: 'More Reports', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/moreReports.view?'}
-            ]
-        }]
-    });
+        if (ctx['EHRIssuesContainer']) {
+            issueHTML = '<div style="max-width:920px">Below are the sections of the Electronic Health Record.  If there are additional reports you would like, please submit a request <a href="' + LABKEY.ActionURL.buildURL('issues', 'list', ctx['EHRIssuesContainer']) + '" target="_blank">here</a>.<br><br></div>'
+        }
 
-    var menuCfg = {
-        width: 330,
-        renderTo: 'ehrMenu3_'+webpart.wrapperDivId,
-        sections: [{
-            header: 'Misc',
-            itemDefaults: {
-                linkCls: 'none',
-                style: 'font-weight: bold;'
-            },
-            items: [
-                {name: 'Compare Lists of Animals', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/utilities.view?'},
-                //{name: 'Drug Formulary', url: '<%=contextPath%>/query' + ctx['EHRStudyContainer'] + '/executeQuery.view?schemaName=ehr_lookups&query.queryName=drug_defaults'},
-                //{name: 'Procedure List', url: '<%=contextPath%>/query' + ctx['EHRStudyContainer'] + '/executeQuery.view?schemaName=ehr_lookups&query.queryName=procedures&query.viewName=Active Procedures'},
-                //{name: 'Search Center SNOMED Codes', url: '<%=contextPath%>/query' + ctx['EHRStudyContainer'] + '/executeQuery.view?schemaName=ehr_lookups&query.queryName=snomed'},
-                //{name: 'Mature Female Exposed To Fertile Male', url: '<%=contextPath%>/query' + ctx['EHRStudyContainer'] + '/executeQuery.view?schemaName=ehr&query.queryName=animalExposure&query.viewName=Mature Female Exposed To Fertile Male'}
-            ]
-        },{
-            header: 'Data Entry',
-            itemDefaults: {
-                linkCls: 'none',
-                style: 'font-weight: bold;'
-            },
-            items: [
-                {name: 'Enter Data', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/enterData.view'},
-                {name: 'New Animal Wizard', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/NewAnimalWizard.view?'}
-            ]
-        }]
-    };
+        Ext4.get(webpart.wrapperDivId).update(
+            issueHTML +
+            '<table>' +
+            '<tr style="vertical-align:top">' +
+            '    <td style="width:300px">' +
+            '        <div id="ehrMenu1_' + webpart.wrapperDivId + '"></div>' +
+            '    </td>' +
+            '    <td style="width:300px;vertical-align:top">' +
+            '        <div id="ehrMenu2_' + webpart.wrapperDivId + '"></div>' +
+            '    </td>' +
+            '    <td style="width:300px">' +
+            '        <div id="ehrMenu3_' + webpart.wrapperDivId + '"></div>' +
+            '    </td>' +
+            '</tr>' +
+            '</table>'
+        );
 
-    if (LABKEY.Security.currentUser.isAdmin){
-        menuCfg.sections.push({
-            header: 'Admin',
-            itemDefaults: {
-                linkCls: 'none',
-                style: 'font-weight: bold;'
-            },
-            items: [
-                {name: 'EHR Admin Page', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/ehrAdmin.view'},
-                {name: 'Manage EHR Study', url: '<%=contextPath%>/study' + ctx['EHRStudyContainer'] + '/manageStudy.view?'},
-                {name: 'Manage Lookup Tables', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/editLookupTables.view'},
-                {name: 'Enter Data', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/dataEntry.view'}
-            ]
+        Ext4.create('LDK.panel.NavPanel', {
+            width: 270,
+            renderTo: 'ehrMenu1_' + webpart.wrapperDivId,
+            sections: [{
+                header: 'By Animal',
+                itemDefaults: {
+                    linkCls: 'none',
+                    style: 'font-weight: bold;'
+                },
+                items: [
+                    { name: 'Animal History', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/animalHistory.view?' },
+                    { name: 'Animal Search', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/animalSearch.view?' }
+                ]
+            }, {
+                header: 'By Dataset',
+                itemDefaults: {
+                    linkCls: 'none',
+                    style: 'font-weight: bold;'
+                },
+                items: [
+                    { name: 'Browse All Datasets', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/datasets.view?' },
+                    { name: 'Housing Queries', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/housingQueries.view?' },
+                    { name: 'Protocol and Project Queries', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/projectQueries.view?' }
+                ]
+            }, {
+                header: 'By Location',
+                itemDefaults: {
+                    linkCls: 'none',
+                    style: 'font-weight: bold;'
+                },
+                items: [
+                    { name: 'Search By Area or Room', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/animalHistory.view#inputType:roomCage' },
+                    {
+                        name: 'Animal Tree View Navigation',
+                        url: '<%=contextPath%>/AnimalsHierarchy' + ctx['EHRStudyContainer'] + '/getView.view'
+                    }
+                ]
+            }]
         });
+
+        Ext4.create('LDK.panel.NavPanel', {
+            width: 270,
+            renderTo: 'ehrMenu2_' + webpart.wrapperDivId,
+            sections: [{
+                header: 'Entire Colony',
+                itemDefaults: {
+                    linkCls: 'none',
+                    style: 'font-weight: bold;'
+                },
+                items: [
+                    //{name: 'Animal Groups', url: '<%=contextPath%>/query' + ctx['EHRStudyContainer'] + '/executeQuery.view?schemaName=ehr&query.queryName=animal_groups&query.viewName=Active Groups'},
+                    { name: 'Colony Overview', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/colonyOverview.view?' },
+                    { name: 'Room Utilization', url: '<%=contextPath%>/query' + ctx['EHRStudyContainer'] + '/executeQuery.view?schemaName=ehr_lookups&query.queryName=roomUtilization' },
+                    { name: 'More Reports', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/moreReports.view?' }
+                ]
+            }, {
+                ...(currentUserGroups.find(o => (o.name === 'SNPRC Colony Admins')) && {
+                    header: 'Colony Management',
+                    itemDefaults: {
+                        linkCls: 'none',
+                        style: 'font-weight: bold;'
+                    },
+                    items: [
+                        {
+                            name: 'New Animal Wizard',
+                            url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/NewAnimalWizard.view?'
+                        }
+                    ]
+                })
+            }]
+        });
+
+        let menuCfg = {
+            width: 330,
+            renderTo: 'ehrMenu3_' + webpart.wrapperDivId,
+            sections: [{
+                header: 'Misc',
+                itemDefaults: {
+                    linkCls: 'none',
+                    style: 'font-weight: bold;'
+                },
+                items: [
+                    { name: 'Compare Lists of Animals', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/utilities.view?' },
+                    //{name: 'Drug Formulary', url: '<%=contextPath%>/query' + ctx['EHRStudyContainer'] + '/executeQuery.view?schemaName=ehr_lookups&query.queryName=drug_defaults'},
+                    //{name: 'Procedure List', url: '<%=contextPath%>/query' + ctx['EHRStudyContainer'] + '/executeQuery.view?schemaName=ehr_lookups&query.queryName=procedures&query.viewName=Active Procedures'},
+                    //{name: 'Search Center SNOMED Codes', url: '<%=contextPath%>/query' + ctx['EHRStudyContainer'] + '/executeQuery.view?schemaName=ehr_lookups&query.queryName=snomed'},
+                    //{name: 'Mature Female Exposed To Fertile Male', url: '<%=contextPath%>/query' + ctx['EHRStudyContainer'] + '/executeQuery.view?schemaName=ehr&query.queryName=animalExposure&query.viewName=Mature Female Exposed To Fertile Male'}
+                ]
+            }, {
+                header: 'Data Entry',
+                itemDefaults: {
+                    linkCls: 'none',
+                    style: 'font-weight: bold;'
+                },
+                items: [
+                    { name: 'Enter Data', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/enterData.view' },
+                ]
+
+            }
+            ]
+        };
+
+        if (LABKEY.Security.currentUser.isAdmin) {
+            menuCfg.sections.push({
+                header: 'Admin',
+                itemDefaults: {
+                    linkCls: 'none',
+                    style: 'font-weight: bold;'
+                },
+                items: [
+                    { name: 'EHR Admin Page', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/ehrAdmin.view' },
+                    { name: 'Manage EHR Study', url: '<%=contextPath%>/study' + ctx['EHRStudyContainer'] + '/manageStudy.view?' },
+                    { name: 'Manage Lookup Tables', url: '<%=contextPath%>/snprc_ehr' + ctx['EHRStudyContainer'] + '/editLookupTables.view' },
+                    { name: 'Enter Data', url: '<%=contextPath%>/ehr' + ctx['EHRStudyContainer'] + '/dataEntry.view' }
+                ]
+            });
+        }
+
+        Ext4.create('LDK.panel.NavPanel', menuCfg);
+
     }
-
-    Ext4.create('LDK.panel.NavPanel', menuCfg);
-});
-
 </script>
