Enable Charts/Reports Animal History tabbed reports

--- a/snprc_ehr/resources/views/animalHistory.html
+++ b/snprc_ehr/resources/views/animalHistory.html
@@ -11,6 +11,7 @@
             defaultReport: ctx.DefaultAnimalHistoryReport,
             defaultTab: 'General',
             showFilterOptionsTitle: true,
+            showReportsOption:true,
             filterTypes: [{
                 xtype: 'ldk-singlesubjectfiltertype',
                 inputValue: LDK.panel.SingleSubjectFilterType.filterName,
