New dev - more chip reader updates

--- a/snprc_ehr/src/client/Shared/styles/settings.scss
+++ b/snprc_ehr/src/client/Shared/styles/settings.scss
@@ -9,6 +9,7 @@ $off-white: #f7f7f7;
 $info-red: #c24343;
 $info-blue: #100796;
 $tooltip-yellow: #e7e693;
+$info-green: #7aec76c2;
 // Font Size
 $font-size-xlarge: 3.6rem;
 $font-size-large: 1.8rem;
