--- a/snprc_ehr/src/client/ChipReader/styles/chipReader.scss
+++ b/snprc_ehr/src/client/ChipReader/styles/chipReader.scss
@@ -1,4 +1,4 @@
-@import "../../shared/styles/style.scss";
+@import "../../Shared/styles/style.scss";
 @import "../../Shared/styles/components/infoPanel";
 @import "../../Shared/styles/components/shared";
 @import "../../Shared/styles/components/summaryGridPanel";
