1. Changes need to be made to Acquisition Panel, NewAnimalPage, and SaveModal to allow user to specify the number of hamsters to be added. 2. Updated PotentialDams and PotentialSires queries to include gestational age for hamsters

--- a/snprc_ehr/src/client/NewAnimalPage/styles/components/_summaryPanel.scss
+++ b/snprc_ehr/src/client/NewAnimalPage/styles/components/_summaryPanel.scss
@@ -75,6 +75,12 @@
     text-overflow: ellipsis;
 }
 
+.summary-text-input-red  {
+    border: 2px solid $info-red;
+    color: $info-red;
+    font-weight: bold;
+}
+
 .summary-date-input  {
     flex-basis: 35rem;
     flex-shrink: 1;
@@ -93,6 +99,11 @@
     font-weight: 600;
 }
 
+.summary-label-red {
+    display:flex;
+    color: $info-red;
+    font-weight: 600;
+}
 .date-width {
       width: 23rem !important;
 }
