--- a/snprc_ehr/src/client/NewAnimalPage/styles/newAnimalPage.scss
+++ b/snprc_ehr/src/client/NewAnimalPage/styles/newAnimalPage.scss
@@ -23,3 +23,9 @@
   height:$l-panel;
   padding: 0, .1rem !important;  
 }
+
+.info-text-span {
+  color: $info-red;
+  font-weight: bold !important;
+  font-size: $font-size-medium;
+}
