1. Automated testing and styling changes for hamster acquisition changes. 2. Updated snapshots

--- a/snprc_ehr/src/client/NewAnimalPage/styles/components/_locationPanel.scss
+++ b/snprc_ehr/src/client/NewAnimalPage/styles/components/_locationPanel.scss
@@ -11,7 +11,7 @@
 
 .cage-input  {
   border-radius: 5px;
-  border: 1px solid $gray;
+  border: 1px solid $dark-gray;
   margin: 0 0 0 11px;
   padding: $s-size $s-size $s-size $xs-size; 
   width: 10rem;
