New Animal Dev - multiple animal inserts (#278)
* Hamsters are acquired in bulk - changes made to Acquisition Panel to allow user to specify the number of hamsters to be added.

* 1. Changes need to be made to Acquisition Panel, NewAnimalPage, and SaveModal to allow user to specify the number of hamsters to be added.
2. Updated PotentialDams and PotentialSires queries to include gestational age for hamsters

* Fixed formatting

* Updated snapshots

* 1. Automated testing and styling changes for hamster acquisition changes. 2. Updated snapshots

--- a/snprc_ehr/src/client/NewAnimalPage/styles/newAnimalPage.scss
+++ b/snprc_ehr/src/client/NewAnimalPage/styles/newAnimalPage.scss
@@ -10,6 +10,7 @@
 @import "./components/locationPanel";
 @import "./components/dietPanel";
 @import "./components/summaryPanel";
+@import "./components/acquisitionPanel";
 
 .right-panel {
     flex: 1;
