--- a/snprc_ehr/src/client/NewAnimalPage/styles/components/_summaryPanel.scss
+++ b/snprc_ehr/src/client/NewAnimalPage/styles/components/_summaryPanel.scss
@@ -10,6 +10,7 @@
     background-color: white;
     font-size: $font-size-xsmall;
 }
+
 .section-header {
     display: flex;
     padding: .4rem 1rem;
@@ -75,6 +76,12 @@
     text-overflow: ellipsis;
 }
 
+.summary-text-input-red  {
+    border: 2px solid $info-red;
+    color: $info-red;
+    font-weight: bold;
+}
+
 .summary-date-input  {
     flex-basis: 35rem;
     flex-shrink: 1;
@@ -93,6 +100,11 @@
     font-weight: 600;
 }
 
+.summary-label-red {
+    display:flex;
+    color: $info-red;
+    font-weight: 600;
+}
 .date-width {
       width: 23rem !important;
 }
