LabKey's DbSequence manager doesn't provide the necessary functionality to handle SNPRC animal ID's. SNPRC_EHRSequencer class was updated to allow deleted IDs to be placed back in the queue for reassignment in the future.
1. added snprc_ehr.Counters table to manage sequences
2. refactored SNPRC_EHRSequencer to manage sequences in new counters table
3. fixed save error reporting in NewAnimalPage.jsx
4. tweaked InfoPanel message formats
5. updated updateAnimalData.js API to be aware of multiple ID requests
6. updated snapshots
7. incremented snprc_ehr module version

--- a/snprc_ehr/src/client/Shared/styles/components/_infoPanel.scss
+++ b/snprc_ehr/src/client/Shared/styles/components/_infoPanel.scss
@@ -28,14 +28,18 @@
 }
 
 .info-err-span {
-    background-color: $disabled-gray;
-    border: 1px solid $info-red;
-    border-radius: 3px;
-    color: $info-red;
+    // background-color: $disabled-gray;
+    // border: 1px solid $info-red;
+    // border-radius: 3px;
+    
+    color: black;
     padding: 0.2rem;
 }
 
 .info-err-div {
-    padding: 1rem 0 0 0;
+    padding: 1rem;
     font-weight: 600;
+    background-color: $info-light-red;
+    border: 1px solid $info-light-red;
+    border-radius: 3px;
 }
