--- a/snprc_ehr/src/client/Shared/styles/settings.scss
+++ b/snprc_ehr/src/client/Shared/styles/settings.scss
@@ -7,6 +7,7 @@ $button-blue: #282aa5;
 $dark-blue: #364051;
 $off-white: #f7f7f7;
 $info-red: #c24343;
+$info-light-red: #e06d6d;
 $info-blue: #100796;
 $tooltip-yellow: #e7e693;
 $info-green: #7aec76c2;
